create options api for records
